// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatterSidebar Tests render should in folder view 1`] = `
<div
  class="matter-sidebar-container"
  style="transform: translateX(0px); margin-right: 0px;"
>
  <div
    class="matter-sidebar"
    data-testid="matter-sidebar"
    is-open="true"
  >
    <div
      class="matter-sidebar-nav-header"
    >
      <button
        appearance="tertiary"
        data-testid="matter-sidebar-nav-back"
        density="compact"
      >
        <div
          class="matter-sidebar-nav-back"
        >
          <div
            iconname="angle-left"
            size="24"
          />
          <span
            appearance="body-strong-md"
          >
            Back
          </span>
        </div>
      </button>
      <button
        appearance="tertiary"
        data-testid="matter-sidebar-nav-close"
      >
        <div
          iconname="close"
          size="16"
        />
      </button>
    </div>
    <div
      class="matter-sidebar-folder-name"
    >
      <span
        appearance="heading-lg"
      >
        fakeMatter
      </span>
    </div>
    <div
      class="matter-body-header matter-sidebar-header"
      data-testid="matter-body-header"
    >
      <div
        class="new-folder-or-chat-button-container"
        data-testid="new-folder-or-chat-button-container"
      >
        <button
          appearance="primary"
          data-testid="new-chat-button"
        >
          <div
            class="new-folder-or-chat-button"
          >
            <div
              iconname="plus"
            />
            New chat
          </div>
        </button>
      </div>
      <div
        class="new-folder-or-chat-button-container"
        data-testid="sort-option-container"
      >
        <button
          appearance="tertiary"
          data-testid="sort-option-button"
        >
          <div
            class="new-folder-or-chat-button"
          >
            Sort by date
            <div
              iconname="angle-down"
            />
          </div>
        </button>
      </div>
    </div>
    <div
      class="chat-list-container"
    >
      <div
        class="empty-chat-list"
      >
         Chats will appear here
      </div>
    </div>
    <div
      class="matter-sidebar-footer"
    >
      <hr
        class="matter-sidebar-footer-separator"
      />
      <div
        class="matter-sidebar-footer-button-container"
      >
        <div
          class="selectable-item"
          data-testid="matter-files-button"
        >
          <div
            appearance="light"
            iconname="files"
            size="16"
          />
          <span
            appearance="body-default-md"
            id="matter-files-button"
          >
            Matter files
          </span>
        </div>
        <div
          class="selectable-item"
          data-testid="matter-settings-button"
        >
          <div
            appearance="light"
            iconname="gear"
            size="16"
          />
          <span
            appearance="body-default-md"
            id="matter-settings-button"
          >
            Matter settings
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MatterSidebar Tests render should render 1`] = `
<div
  class="matter-sidebar-container"
  style="transform: translateX(0px); margin-right: 0px;"
>
  <div
    class="matter-sidebar"
    data-testid="matter-sidebar"
    is-open="true"
  >
    <div
      class="matter-sidebar-nav-header"
    >
      <span
        appearance="body-strong-md"
      >
        Home
      </span>
      <button
        appearance="tertiary"
        data-testid="matter-sidebar-nav-close"
      >
        <div
          iconname="close"
          size="16"
        />
      </button>
    </div>
    <div
      class="matter-body-header matter-sidebar-header"
      data-testid="matter-body-header"
    >
      <div
        class="new-folder-or-chat-button-container"
        data-testid="new-folder-or-chat-button-container"
      >
        <button
          appearance="primary"
          data-testid="new-chat-button"
        >
          <div
            class="new-folder-or-chat-button"
          >
            <div
              iconname="plus"
            />
            New
          </div>
        </button>
      </div>
      <div
        class="new-folder-or-chat-button-container"
        data-testid="sort-option-container"
      >
        <button
          appearance="tertiary"
          data-testid="sort-option-button"
        >
          <div
            class="new-folder-or-chat-button"
          >
            Sort by date
            <div
              iconname="angle-down"
            />
          </div>
        </button>
      </div>
    </div>
    <div
      class="chat-list-container"
    >
      <div
        class="empty-chat-list"
      >
         Chats will appear here
      </div>
    </div>
    <div
      class="matter-sidebar-footer"
    >
      <hr
        class="matter-sidebar-footer-separator"
      />
      <div
        class="matter-sidebar-archived-matters-selectable"
      >
        <div
          class="matter-sidebar-archived-matters-selectable-section"
        >
          <div
            class="selectable-item"
            data-testid="archived-matters-selectable"
          >
            <div
              class="matter-sidebar-archived-matters-selectable-item"
            >
              <div>
                <div
                  appearance="light"
                  iconname="box-archive"
                  size="16"
                />
                <span
                  appearance="body-strong-md"
                  id="chat-archived-matters-navigation"
                >
                  Archived Matters
                </span>
              </div>
              <div
                appearance="light"
                class="matter-sidebar-archived-matters-selectable-icon"
                iconname="chevron-right"
                size="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
